// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data Table Page Should match snapshot for Data Table 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-f7fu58"
      >
        <div
          class="css-8zasf"
        >
          <div
            class="css-1wo2j8q"
          >
            <div
              class="css-1anpw3e"
            >
              <svg
                class="chakra-icon css-tud5pv"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M23.384,21.619,16.855,15.09a9.284,9.284,0,1,0-1.768,1.768l6.529,6.529a1.266,1.266,0,0,0,1.768,0A1.251,1.251,0,0,0,23.384,21.619ZM2.75,9.5a6.75,6.75,0,1,1,6.75,6.75A6.758,6.758,0,0,1,2.75,9.5Z"
                  fill="currentColor"
                />
              </svg>
              <input
                class="chakra-input css-oce1e7"
                id="search:r0:"
                placeholder="Search..."
                value=""
              />
            </div>
          </div>
          <button
            class="chakra-button css-11ko6ne"
            type="button"
          >
            + Add customer
          </button>
        </div>
        <div
          class="css-1milhtq"
        >
          <div
            class="css-1dj3a23"
          >
            <p
              class="chakra-text css-0"
            >
              Name
            </p>
            <img
              class="chakra-image css-0"
              src="/icons/column-sorting-none.svg"
            />
          </div>
          <p
            class="chakra-text css-1i8mt9"
          >
            Description
          </p>
          <p
            class="chakra-text css-l7sbe5"
          >
            Status
          </p>
          <p
            class="chakra-text css-mxka6n"
          >
            Rate
          </p>
          <p
            class="chakra-text css-mxka6n"
          >
            Balance
          </p>
          <p
            class="chakra-text css-mxka6n"
          >
            Deposit
          </p>
          <div
            class="css-yikrym"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-f7fu58"
    >
      <div
        class="css-8zasf"
      >
        <div
          class="css-1wo2j8q"
        >
          <div
            class="css-1anpw3e"
          >
            <svg
              class="chakra-icon css-tud5pv"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M23.384,21.619,16.855,15.09a9.284,9.284,0,1,0-1.768,1.768l6.529,6.529a1.266,1.266,0,0,0,1.768,0A1.251,1.251,0,0,0,23.384,21.619ZM2.75,9.5a6.75,6.75,0,1,1,6.75,6.75A6.758,6.758,0,0,1,2.75,9.5Z"
                fill="currentColor"
              />
            </svg>
            <input
              class="chakra-input css-oce1e7"
              id="search:r0:"
              placeholder="Search..."
              value=""
            />
          </div>
        </div>
        <button
          class="chakra-button css-11ko6ne"
          type="button"
        >
          + Add customer
        </button>
      </div>
      <div
        class="css-1milhtq"
      >
        <div
          class="css-1dj3a23"
        >
          <p
            class="chakra-text css-0"
          >
            Name
          </p>
          <img
            class="chakra-image css-0"
            src="/icons/column-sorting-none.svg"
          />
        </div>
        <p
          class="chakra-text css-1i8mt9"
        >
          Description
        </p>
        <p
          class="chakra-text css-l7sbe5"
        >
          Status
        </p>
        <p
          class="chakra-text css-mxka6n"
        >
          Rate
        </p>
        <p
          class="chakra-text css-mxka6n"
        >
          Balance
        </p>
        <p
          class="chakra-text css-mxka6n"
        >
          Deposit
        </p>
        <div
          class="css-yikrym"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Data Table Page Should search with the value entered 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-f7fu58"
      >
        <div
          class="css-8zasf"
        >
          <div
            class="css-1wo2j8q"
          >
            <div
              class="css-1anpw3e"
            >
              <svg
                class="chakra-icon css-tud5pv"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M23.384,21.619,16.855,15.09a9.284,9.284,0,1,0-1.768,1.768l6.529,6.529a1.266,1.266,0,0,0,1.768,0A1.251,1.251,0,0,0,23.384,21.619ZM2.75,9.5a6.75,6.75,0,1,1,6.75,6.75A6.758,6.758,0,0,1,2.75,9.5Z"
                  fill="currentColor"
                />
              </svg>
              <input
                class="chakra-input css-oce1e7"
                id="search:r1:"
                placeholder="Search..."
                value="description 11"
              />
            </div>
          </div>
          <button
            class="chakra-button css-11ko6ne"
            type="button"
          >
            + Add customer
          </button>
        </div>
        <div
          class="css-1milhtq"
        >
          <div
            class="css-1dj3a23"
          >
            <p
              class="chakra-text css-0"
            >
              Name
            </p>
            <img
              class="chakra-image css-0"
              src="/icons/column-sorting-none.svg"
            />
          </div>
          <p
            class="chakra-text css-1i8mt9"
          >
            Description
          </p>
          <p
            class="chakra-text css-l7sbe5"
          >
            Status
          </p>
          <p
            class="chakra-text css-mxka6n"
          >
            Rate
          </p>
          <p
            class="chakra-text css-mxka6n"
          >
            Balance
          </p>
          <p
            class="chakra-text css-mxka6n"
          >
            Deposit
          </p>
          <div
            class="css-yikrym"
          />
        </div>
        <div
          class="css-3ehqor"
        >
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            class="chakra-progress css-7d3cb9"
            data-indeterminate=""
            role="progressbar"
          >
            <svg
              class="css-tn9112"
              viewBox="0 0 100 100"
            >
              <circle
                class="chakra-progress__track css-1bhxzgy"
                cx="50"
                cy="50"
                r="42"
                stroke-width="10px"
              />
              <circle
                class="chakra-progress__indicator css-qa0lra"
                cx="50"
                cy="50"
                r="42"
                stroke-width="10px"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-f7fu58"
    >
      <div
        class="css-8zasf"
      >
        <div
          class="css-1wo2j8q"
        >
          <div
            class="css-1anpw3e"
          >
            <svg
              class="chakra-icon css-tud5pv"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M23.384,21.619,16.855,15.09a9.284,9.284,0,1,0-1.768,1.768l6.529,6.529a1.266,1.266,0,0,0,1.768,0A1.251,1.251,0,0,0,23.384,21.619ZM2.75,9.5a6.75,6.75,0,1,1,6.75,6.75A6.758,6.758,0,0,1,2.75,9.5Z"
                fill="currentColor"
              />
            </svg>
            <input
              class="chakra-input css-oce1e7"
              id="search:r1:"
              placeholder="Search..."
              value="description 11"
            />
          </div>
        </div>
        <button
          class="chakra-button css-11ko6ne"
          type="button"
        >
          + Add customer
        </button>
      </div>
      <div
        class="css-1milhtq"
      >
        <div
          class="css-1dj3a23"
        >
          <p
            class="chakra-text css-0"
          >
            Name
          </p>
          <img
            class="chakra-image css-0"
            src="/icons/column-sorting-none.svg"
          />
        </div>
        <p
          class="chakra-text css-1i8mt9"
        >
          Description
        </p>
        <p
          class="chakra-text css-l7sbe5"
        >
          Status
        </p>
        <p
          class="chakra-text css-mxka6n"
        >
          Rate
        </p>
        <p
          class="chakra-text css-mxka6n"
        >
          Balance
        </p>
        <p
          class="chakra-text css-mxka6n"
        >
          Deposit
        </p>
        <div
          class="css-yikrym"
        />
      </div>
      <div
        class="css-3ehqor"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          class="chakra-progress css-7d3cb9"
          data-indeterminate=""
          role="progressbar"
        >
          <svg
            class="css-tn9112"
            viewBox="0 0 100 100"
          >
            <circle
              class="chakra-progress__track css-1bhxzgy"
              cx="50"
              cy="50"
              r="42"
              stroke-width="10px"
            />
            <circle
              class="chakra-progress__indicator css-qa0lra"
              cx="50"
              cy="50"
              r="42"
              stroke-width="10px"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Data Table Page Should sort by name 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-f7fu58"
      >
        <div
          class="css-8zasf"
        >
          <div
            class="css-1wo2j8q"
          >
            <div
              class="css-1anpw3e"
            >
              <svg
                class="chakra-icon css-tud5pv"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M23.384,21.619,16.855,15.09a9.284,9.284,0,1,0-1.768,1.768l6.529,6.529a1.266,1.266,0,0,0,1.768,0A1.251,1.251,0,0,0,23.384,21.619ZM2.75,9.5a6.75,6.75,0,1,1,6.75,6.75A6.758,6.758,0,0,1,2.75,9.5Z"
                  fill="currentColor"
                />
              </svg>
              <input
                class="chakra-input css-oce1e7"
                id="search:r2:"
                placeholder="Search..."
                value=""
              />
            </div>
          </div>
          <button
            class="chakra-button css-11ko6ne"
            type="button"
          >
            + Add customer
          </button>
        </div>
        <div
          class="css-1milhtq"
        >
          <div
            class="css-1dj3a23"
          >
            <p
              class="chakra-text css-0"
            >
              Name
            </p>
            <img
              class="chakra-image css-0"
              src="/icons/column-sorting-none.svg"
            />
          </div>
          <p
            class="chakra-text css-1i8mt9"
          >
            Description
          </p>
          <p
            class="chakra-text css-l7sbe5"
          >
            Status
          </p>
          <p
            class="chakra-text css-mxka6n"
          >
            Rate
          </p>
          <p
            class="chakra-text css-mxka6n"
          >
            Balance
          </p>
          <p
            class="chakra-text css-mxka6n"
          >
            Deposit
          </p>
          <div
            class="css-yikrym"
          />
        </div>
        <div
          class="css-3ehqor"
        >
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            class="chakra-progress css-7d3cb9"
            data-indeterminate=""
            role="progressbar"
          >
            <svg
              class="css-tn9112"
              viewBox="0 0 100 100"
            >
              <circle
                class="chakra-progress__track css-1bhxzgy"
                cx="50"
                cy="50"
                r="42"
                stroke-width="10px"
              />
              <circle
                class="chakra-progress__indicator css-qa0lra"
                cx="50"
                cy="50"
                r="42"
                stroke-width="10px"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-f7fu58"
    >
      <div
        class="css-8zasf"
      >
        <div
          class="css-1wo2j8q"
        >
          <div
            class="css-1anpw3e"
          >
            <svg
              class="chakra-icon css-tud5pv"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M23.384,21.619,16.855,15.09a9.284,9.284,0,1,0-1.768,1.768l6.529,6.529a1.266,1.266,0,0,0,1.768,0A1.251,1.251,0,0,0,23.384,21.619ZM2.75,9.5a6.75,6.75,0,1,1,6.75,6.75A6.758,6.758,0,0,1,2.75,9.5Z"
                fill="currentColor"
              />
            </svg>
            <input
              class="chakra-input css-oce1e7"
              id="search:r2:"
              placeholder="Search..."
              value=""
            />
          </div>
        </div>
        <button
          class="chakra-button css-11ko6ne"
          type="button"
        >
          + Add customer
        </button>
      </div>
      <div
        class="css-1milhtq"
      >
        <div
          class="css-1dj3a23"
        >
          <p
            class="chakra-text css-0"
          >
            Name
          </p>
          <img
            class="chakra-image css-0"
            src="/icons/column-sorting-none.svg"
          />
        </div>
        <p
          class="chakra-text css-1i8mt9"
        >
          Description
        </p>
        <p
          class="chakra-text css-l7sbe5"
        >
          Status
        </p>
        <p
          class="chakra-text css-mxka6n"
        >
          Rate
        </p>
        <p
          class="chakra-text css-mxka6n"
        >
          Balance
        </p>
        <p
          class="chakra-text css-mxka6n"
        >
          Deposit
        </p>
        <div
          class="css-yikrym"
        />
      </div>
      <div
        class="css-3ehqor"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          class="chakra-progress css-7d3cb9"
          data-indeterminate=""
          role="progressbar"
        >
          <svg
            class="css-tn9112"
            viewBox="0 0 100 100"
          >
            <circle
              class="chakra-progress__track css-1bhxzgy"
              cx="50"
              cy="50"
              r="42"
              stroke-width="10px"
            />
            <circle
              class="chakra-progress__indicator css-qa0lra"
              cx="50"
              cy="50"
              r="42"
              stroke-width="10px"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
